# kicad-ipc-rust

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTIONS.md  Cargo.toml  README.md  api-reference.html  build.rs  examples.html  index.html  print.html  quickstart.html  release-plz.toml  searcher-c2a407aa.js  searchindex-9522f933.js  toc-cba1521b.js  toc.html  usage-patterns.html  validation.html
.github/workflows/: mdbook.yml  release-plz.yml
docs/: TEST_CLI.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  api-reference.md  examples.md  intro.md  quickstart.md  usage-patterns.md  validation.md
docs/book/src/https:/docs.rs/: kicad-ipc-rs
docs/slash-commands/: StandardChecks.md
scripts/: regenerate-protos.sh
src/: blocking.rs  client.rs  envelope.rs  error.rs  kicad_api_version.rs  lib.rs  transport.rs
src/model/: board.rs  common.rs
src/proto/: mod.rs
test-scripts/: kicad-ipc-cli.rs
tools/proto-gen/: Cargo.toml
tools/proto-gen/src/: main.rs
